# zikkurat-mind

./: CURRENT_ARCHITECTURE.md  CURRENT_STATUS.md  Cargo.toml  MEMORY_CLI_MANUAL.md  MEMORY_GUIDE.md  MEMORY_INTEGRATION_REPORT.md  POST_MVP_GUIDE.md  README.md  TESTING_INSTRUCTIONS.md  TEST_SIMPLE.md  check_memory_integration.bat  core_backup.rs  run_tests.bat  run_tests.sh  test_all_functions.bat  test_all_functions.sh  test_cuda.sh  test_model_responses.bat
config/archetypes/: devops.json  girlfriend.json  philosopher.json  programmer.json  scientist.json
data/: .gitignore
documentation/: CORE_PHILOSOPHY-extended.md  CORE_PHILOSOPHY.md  DEMIURGE_GUIDE.md  FILE_STRUCTURE_GUIDE.md  MVP_GUIDE.md  MVP_SUCCESS_CRITERIA.md  PERSONA_MEMORY_INTEGRATION.md  README.md  RTX4090_IMPLEMENTATION_PLAN.md  TECHNICAL_IMPLEMENTATION_GUIDE.md  TODO_Session_Context_Transfer.md  WEEKLY_IMPLEMENTATION_SCHEDULE.md
src/: main.rs  main_enhanced.rs  main_memory.rs  main_memory_final.rs  main_memory_fixed.rs  main_simple.rs  main_unified.rs  test_context.rs  test_kg.rs  utils.rs
src/demiurge/: archetype.rs  context.rs  directives.rs  evolution.rs  mod.rs  narrative.rs  narrative_backup.rs  narrative_temp.rs  persona.rs
src/initiation/: archetypes.rs  config.rs  mod.rs
src/logos/: inference.rs  mod.rs  sampling.rs  tokenizer.rs
src/priests/: device.rs  dummy_embeddings.rs  embeddings.rs  mod.rs  resources.rs
src/totems/: memory.rs  mod.rs  persistence.rs  retrieval.rs
src/totems/episodic/: mod.rs  persistence.rs
src/totems/retrieval/: vector_store.rs
src/totems/semantic/: concept.rs  manager.rs  mod.rs  persistence.rs
