[package]
name = "mistral-pure"
version = "0.1.0"
edition = "2021"
description = "mistral-pure using Candle"
license = "MIT OR Apache-2.0"

[dependencies]
# Candle dependencies - using official HuggingFace candle (reverted to stable version)
candle-core = { git = "https://github.com/huggingface/candle", rev = "f526033db7ea880c7189628a2dc00e3e2008a9e7" }
candle-nn = { git = "https://github.com/huggingface/candle", rev = "f526033db7ea880c7189628a2dc00e3e2008a9e7" }
candle-transformers = { git = "https://github.com/huggingface/candle", rev = "f526033db7ea880c7189628a2dc00e3e2008a9e7" }

# CLI and utilities
anyhow = "1"
clap = { version = "4.2", features = ["derive"] }
hf-hub = "0.4.1"
tokenizers = { version = "0.21.0", default-features = false, features = ["onig"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Новые зависимости для системы памяти
bincode = "1.3"                      # Сериализация векторов
uuid = { version = "1.0", features = ["v4", "serde"] }  # Уникальные ID записей
chrono = { version = "0.4", features = ["serde"] }       # Временные метки
parking_lot = "0.12"                 # Быстрые RwLock для многопоточности
lru = "0.12"                        # LRU кэш для GPU
num_cpus = "1.16"                     # Детекция CPU ядер
lz4 = "1.24"                        # Быстрое сжатие
memmap2 = "0.9"                     # Memory mapped files для больших данных

# Tracing (for --tracing flag)
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-chrome = "0.1"

# Image processing (currently unused for Mistral, but kept per description)
image = { version = "0.25.2", default-features = false, features = ["jpeg", "png"] }

[features]
default = []
accelerate = [
    "candle-core/accelerate",
    "candle-nn/accelerate",
    "candle-transformers/accelerate",
]
cuda = [
    "candle-core/cuda",
    "candle-nn/cuda",
    "candle-transformers/cuda",
]
cudnn = [
    "candle-core/cudnn",
    "candle-nn/cudnn",
    "candle-transformers/cudnn",
]
metal = [
    "candle-core/metal",
    "candle-nn/metal",
]
mkl = [
    "candle-core/mkl",
    "candle-nn/mkl",
    "candle-transformers/mkl",
]

[[bin]]
name = "ziggurat-unified"
path = "src/main_unified.rs"